2nd commit : - révision de l'ensemble de l'Object Model : -le polymorphisme est complètement possible (fonction de lien dynamique) -la surcharge aussi, plus besoin de réécrire les fonctions -les exceptions peuvent être jetées (fonctions Throw) sans avoir besoin de bloc try/catch. -Les classes sont à présent séparées de l'instanciation. -Il y a un destructeur commun à toutes les instances.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,18 @@
 cmake_minimum_required(VERSION 3.13)
 project(COOP C)
 
-set(CMAKE_C_STANDARD 90)
+set(CMAKE_C_STANDARD 99)
 
-add_executable(COOP sources/main.c sources/Object.c sources/Object.h sources/DerivedObject.c sources/DerivedObject.h sources/ObjectException.c sources/ObjectException.h)
+add_executable(COOP sources/main.c
+        sources/Object.c
+        sources/Object.h
+
+        sources/objectModel.c
+        sources/objectModel.h
+
+        sources/overriding.h
+
+        sources/objectException.c
+        sources/objectException.h)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Main")
