3ème commit : - RAS si ce n'est que tout ce qui a été fait du 1er commit a dû être revu en fonction des nouvelles exigeances de l'ObjectModel - moins de données codées en dur, plus de généricité (travaillées en test dans un autre projet), calcul des offsets des membres d'une structure. - travail sur le main pour essayer de ne pas avoir ces grosses fonctions start() et end() bien moches dedans (pas réussi à trouver une solution satisfaisante).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,11 @@ add_executable(COOP sources/main.c
         sources/Object.c
         sources/Object.h
 
+        sources/DerivedObject.c
+        sources/DerivedObject.h
+
         sources/objectModel.c
         sources/objectModel.h
-
-        sources/overriding.h
 
         sources/objectException.c
         sources/objectException.h)
