4ème commit : - Prise en charge des packages à défaut d'avoir des namespaces satisfaisants. À présent, chaque classe est préfixée du nom du package auquel elle appartient. Cela permet de créer des classes qui ont le même nom dans le cas de familles/hierarchies/ensembles différents, mais où pourtant un nom de classe identique est pertinent. Les plus gros projets sont à portée du coup, chouette !

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,14 @@ project(COOP C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(COOP sources/main.c
-        sources/Object.c
-        sources/Object.h
+add_executable(COOP
+        sources/main.c
 
-        sources/DerivedObject.c
-        sources/DerivedObject.h
+        sources/coop/Object.c
+        sources/coop/Object.h
+
+        sources/coop/DerivedObject.c
+        sources/coop/DerivedObject.h
 
         sources/objectModel.c
         sources/objectModel.h
