6ème commit : - Utilisation des macros pour générer le code de l'object model pour une classe donnée. Il n'y a plus à pré-déclarer les fonctions correspondantes aux pointeurs de fonction. Il n'y a plus à assigner chaque pointeur de fonction destiné à être une méthode ou une méthode de classe à chaque fonction (lors du create()). Marche aussi pour l'héritage simple. Tout cela a permit d'alléger énormément de code, surtout si le projet vient à s'agrandir avec beaucoup plus de classes et de méthodes. - Les exceptions sont gérées à un niveau basique et sont rendues plus souples (revu et pourvu de macros rendant le code plus lisible, avec moins de fonctions si cela ne s'avère pas nécessaire). - Dorénavant l'encapsulation n'enlève PAS les éléments en fonction de leur portée, mais les rend simplement constants sur leur pointeur et leur valeur (le type est aussi masqué par un void *). - Les packages sont désormais gérés de manière globale et adaptée aux classes qui les composent (et non plus avec un package visible publiquement uniquement).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,22 @@
 cmake_minimum_required(VERSION 3.13)
 project(COOP C)
 
-set(CMAKE_C_STANDARD 90)
+set(CMAKE_C_STANDARD 99)
 
-add_executable(
-        COOP
+add_executable(COOP
 
         sources/main.c
         sources/objectModel.c
         sources/objectModel.h
+        sources/exceptionManager.c
+        sources/exceptionManager.h
 
-        sources/coop/coop.c
         sources/coop/coop.h
         sources/coop/Object.c
         sources/coop/Object.h
+        sources/coop/Derived.c
+        sources/coop/Derived.h
 
-        sources/util/util.c
         sources/util/util.h
         sources/util/Object.c
         sources/util/Object.h)
