7ème commit :      - l'héritage multiple est dorénavant possible même avec les conflits de noms qu'il occassionne, la méthode utilisée reste le renommage et non la définition d'un ordre de priorité.      - il est possible d'encapsuler les méthodes qui ne sont pas publiques.      - ajout du constructeur par défaut, appel des méthodes statiques rendue le plus simple possible par le pré-constructeur.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,10 @@ add_executable(COOP
         sources/coop/Object.h
         sources/coop/Derived.c
         sources/coop/Derived.h
+        sources/coop/Another.c
+        sources/coop/Another.h
+        sources/coop/Geometric.c
+        sources/coop/Geometric.h
 
         sources/util/util.h
         sources/util/Object.c
