10ème commit :      - La méthode de description de classes est généralisée aux packages et aux interfaces.      - L'héritage côté objet est simplifié et n'entraine plus d'allocation dynamique de mémoire multiple par sous objet. Une seule et unique allocation est nécessaire par objet désormais, ce qui simplifie grandement l'accès aux données héritées aussi.      - Les classes n'ont à être instanciées qu'une fois par contexte et ce uniquement lors de la création d'un nouvel objet. Il n'y a plus de sous classe appartenant à une classe mère contextuelle comme avant (ce qui était très lourd lors de l'usage de l'héritage multiple répété).      - Les objets sont porteurs de métadonnées accessibles à n'importe quel moment par le find générique. Ils sont également auto libérables (le delete générique est appellé à la fin du scope automatiquement), ce qui est avancée majeure par rapport au pseudo garbage collector manuel précédent qui comprenait une liste de chaque instance en mémoire que l'on devait parcourir pour tout désallouer.      - Le new générique est enfin disponible avec sa macro simplifiant grandement la synthaxe de déclaration et de définition d'un nouvel objet. Désormais 3 fonctions publiques sont appellées depuis l'extérieur au cours de la vie d'un objet : id_getSize() -> initialiseur de taille et de classe , id() -> constructeur d'objet, id_() -> destructeur de classe et d'objet.      - Les destructeurs et les constructeurs sont customisables et appellés automatiquement lors de chaque new et chaque delete si on le souhaite.      - Les tableaux d'instance multidimensionnels sont désormais gérables sans paramètres supplémentaires (les getters et les setters restent inchangés même si le code d'initialisation des valeurs a doublé pour prendre en compte à la fois les instances sous forme de tableau et les instances simples) lors de l'appel des méthodes.      - quelques améliorations synthaxiques notables grâces aux extensions gcc (plages de valeur des switchs, aryth

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,42 +4,53 @@ project(COOP C)
 set(CMAKE_C_STANDARD 11)
 set(TARGET_NAME "COOP")
 
+# Availables ids for classes and packages for a COOP :
+# pkZncgNI
+# UbgZseDt
+# eVMHzbxS
+# eGNDuOBB
+# EdKwPHqQ
+# YJpSZFiL
+# vqoWPZRY
+# vjjdVitG
+# JjDrSiUB
+
 add_executable(${TARGET_NAME}
 
-        sources/main.c
-        sources/objectModel.h
+        sources/main.c                  # Public Static context
+        sources/objectModel.h           # Object Oriented Lib
         sources/objectModel.c
-        sources/exceptionManager.h
-        sources/exceptionManager.c
 
-        sources/coop/coop.h
+        sources/coop/coop.h             # Package vlDzoKUd
         sources/coop/coop.c
         sources/coop/Object.h
-        sources/coop/Object.c
+        sources/coop/Object.c           # class kGAzHwmx
         sources/coop/Derived.h
-        sources/coop/Derived.c
+        sources/coop/Derived.c          # class ddUKsuMN
         sources/coop/Another.h
-        sources/coop/Another.c
+        sources/coop/Another.c          # class lbdtYEkR
         sources/coop/Geometric.h
-        sources/coop/Geometric.c
+        sources/coop/Geometric.c        # class YPnOLrQT
         sources/coop/Square.h
-        sources/coop/Square.c
+        sources/coop/Square.c           # class UQZwMHfN
 
-        sources/coop/lang/lang.h
+        sources/coop/lang/lang.h        # Package nnVYoBNR
+        sources/coop/lang/lang.c
         sources/coop/lang/Bool.h
-        sources/coop/lang/Bool.c
-        sources/coop/lang/ToTest.h
+        sources/coop/lang/Bool.c        # class BwXbIZdw
+        sources/coop/lang/ToTest.h      # interface
 
-        sources/util/util.h
+        sources/util/util.h             # Package kdzvSGAN
+        sources/util/util.c
         sources/util/Object.h
-        sources/util/Object.c
-        )
+        sources/util/Object.c           # class KPLGWrfu
+)
 
 if(MSVC)
     target_compile_options(${TARGET_NAME} PRIVATE /W4 /WX)
 else()
     target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -Wconversion)
 endif()
-# -pedantic -Werror
+# -Wstrict-prototypes -Wmissing-prototypes -pedantic -Werror
 
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Main")
