11ème commit :      - Ébauche des collections avec l'usage d'une liste simplement chainée d'objets. En cas de problème d'une mauvaise allocation ou d'un find défaillant, un garbage collector parcoure la liste des instances et les free une à une au lieu de passer par l'auto free.      - Implémentation réelle des exceptions avec les macros try/catch/throws/finally (le système précédent n'était tout simplement pas de vraies exceptions, c'était juste des if simplistes qui ne géraient pas le retour de contexte).      - Les constructeurs prennent en compte les tableaux et leurs longueurs. Disparition d'une fonction interne au constructeur par défaut pour initialiser directement à l'intérieur du constructeur avec leurs valeurs par défaut les arguments.      - Utilisation des fonctions internes lorsqu'elles ne sont utilisées que dans une seule fonction (extension gcc).      - Les objets contiennent la référence de leur classe, ce qui peut être toujours utile en cas de besoin de contrôle de lien dynamique (pour l'instant je n'en ai pas eu besoin cela dit).      - Tentative d'intégrer l'Unit testing Criterion à titre d'exemple mais celui-ci semble ne pas fonctionner (ticket émis sur le repository).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.15)
 project(COOP C)
 
 set(CMAKE_C_STANDARD 11)
-set(TARGET_NAME "COOP")
+set(MAIN_TARGET "COOP")
 
 # Availables ids for classes and packages for a COOP :
 # pkZncgNI
@@ -15,42 +15,46 @@ set(TARGET_NAME "COOP")
 # vjjdVitG
 # JjDrSiUB
 
-add_executable(${TARGET_NAME}
+add_executable(${MAIN_TARGET}
+        sources/main.c                              # Public Static context
+        sources/objectModel.c                       # Object Oriented Lib
+        sources/objectModel.h
+        sources/exceptionManager.c                  # Exception Manager
+        sources/exceptionManager.h
 
-        sources/main.c                  # Public Static context
-        sources/objectModel.h           # Object Oriented Lib
-        sources/objectModel.c
+        sources/collections/simplyLinkedList.c      # Collections Available
+        sources/collections/simplyLinkedList.h
 
-        sources/coop/coop.h             # Package vlDzoKUd
-        sources/coop/coop.c
+        sources/coop/coop.c                         # Package vlDzoKUd
+        sources/coop/coop.h
+        sources/coop/Object.c                       # class kGAzHwmx
         sources/coop/Object.h
-        sources/coop/Object.c           # class kGAzHwmx
+        sources/coop/Derived.c                      # class ddUKsuMN
         sources/coop/Derived.h
-        sources/coop/Derived.c          # class ddUKsuMN
+        sources/coop/Another.c                      # class lbdtYEkR
         sources/coop/Another.h
-        sources/coop/Another.c          # class lbdtYEkR
+        sources/coop/Geometric.c                    # class YPnOLrQT
         sources/coop/Geometric.h
-        sources/coop/Geometric.c        # class YPnOLrQT
+        sources/coop/Square.c                       # class UQZwMHfN
         sources/coop/Square.h
-        sources/coop/Square.c           # class UQZwMHfN
 
-        sources/coop/lang/lang.h        # Package nnVYoBNR
-        sources/coop/lang/lang.c
+        sources/coop/lang/lang.c                    # Package nnVYoBNR
+        sources/coop/lang/lang.h
+        sources/coop/lang/Bool.c                    # class BwXbIZdw
         sources/coop/lang/Bool.h
-        sources/coop/lang/Bool.c        # class BwXbIZdw
-        sources/coop/lang/ToTest.h      # interface
+        sources/coop/lang/ToTest.h                  # interface
 
-        sources/util/util.h             # Package kdzvSGAN
-        sources/util/util.c
+        sources/util/util.c                         # Package kdzvSGAN
+        sources/util/util.h
+        sources/util/Object.c                       # class KPLGWrfu
         sources/util/Object.h
-        sources/util/Object.c           # class KPLGWrfu
-)
+        )
 
 if(MSVC)
-    target_compile_options(${TARGET_NAME} PRIVATE /W4 /WX)
+    target_compile_options(${MAIN_TARGET} PRIVATE /W4 /WX)
 else()
-    target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -Wconversion)
+    target_compile_options(${MAIN_TARGET} PRIVATE -Wall -Wextra -Wconversion -Wmissing-prototypes)
 endif()
-# -Wstrict-prototypes -Wmissing-prototypes -pedantic -Werror
+# -pedantic -Werror
 
-set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "Main")
+set_target_properties(${MAIN_TARGET} PROPERTIES OUTPUT_NAME "Main")
