12ème commit :      - Remise en conformité ISO (warnings mis à jour, suppression de l'usage d'extensions, complétion de la toolchain).      - Suppression des définitions multiples des classes et gestion des ids avec des alias (ou des macros) quand cela est possible afin d'éviter le plus possible de taper manuellement ces derniers dans le code.      - Les setter de classe, constructeurs et destructeurs sont aliasés. Chaque translation unit connait désormais son nom et son package (namespace) grâce à une fonction cmake dédiée.      - ajout d'une lib de backtrace, simplification des exceptions (on n'utilise plus setjmp/lngjmp) et suppression de la lib d'unit testing (pas utile pour l'instant).      - fonction streamF sprintf like mais dédiée uniquement au stream courant.      - gestion de l'ENV_ par défaut dans tout le programme.      - ajout de fonctions de gestion de mémoire dans une plage de mémoire statique déjà pré-allouée.      - Optimisations compile-time de certains calculs + fonction de comptage d'occurrences de chaine de caractère très polyvalante.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,60 +1,61 @@
 cmake_minimum_required(VERSION 3.15)
-project(COOP C)
-
+project(COOP C ASM)
 set(CMAKE_C_STANDARD 11)
-set(MAIN_TARGET "COOP")
 
-# Availables ids for classes and packages for a COOP :
-# pkZncgNI
-# UbgZseDt
-# eVMHzbxS
-# eGNDuOBB
-# EdKwPHqQ
-# YJpSZFiL
-# vqoWPZRY
-# vjjdVitG
-# JjDrSiUB
+set(GCC_SILENT_WARNINGS -Wno-maybe-uninitialized -Wno-expansion-to-defined)
+set(GCC_BONUS_WARNINGS -Wformat=2 -Wformat-overflow=2 -Wformat-truncation=2 -Wformat-security -Wnull-dereference -Wvla -Wtrampolines -Warray-bounds=2 -Wimplicit-fallthrough=3 -Wshift-overflow=2 -Wcast-qual -Wstringop-overflow=4 -Wconversion -Warith-conversion -Wlogical-op -Wduplicated-cond -Wduplicated-branches -Wformat-signedness -Wmissing-prototypes -Wshadow -Wstrict-overflow=4 -Wundef -Wcast-align=strict)
+# -Werror -Wstack-protector -Walloca -Wtraditional-conversion -Wstrict-prototypes -Wswitch-default -Wswitch-enum -Wstack-usage=1000000 -Wpadded
+set(GCC_DEBUG_FLAGS -O3 -fPIE -g)
+# -fPIE -fno-omit-frame-pointer -fno-optimize-sibling-calls -fwrapv -fstack-protector-strong -fstack-clash-protection -fpack-struct=8 -fms-extensions -fcf-protection=full|return|branch -Os -O1 -O2 -O3 -pie -D_FORTIFY_SOURCE=3 -g3 -debug
+set(GCC_LINKER_FLAGS -Wl,-z,relro -Wl,-z,now -Wl,-z,noexecstack -Wl,-z,separate-code)
+set(GNUC_OPTIONS -Wall -Wextra -Wpedantic ${GCC_DEBUG_FLAGS} ${GCC_BONUS_WARNINGS} ${GCC_SILENT_WARNINGS} ${GCC_LINKER_FLAGS})
+set(MSVC_OPTIONS /Wall /WX /sdl /guard:cf /guard:ehcont /CETCOMPAT /fsanitize=address /analyze)
 
-add_executable(${MAIN_TARGET}
-        sources/main.c                              # Public Static context
-        sources/objectModel.c                       # Object Oriented Lib
-        sources/objectModel.h
-        sources/exceptionManager.c                  # Exception Manager
-        sources/exceptionManager.h
+# don't use Google sanitizers and Valgrind / Dr Memory together, use Valgrind / Dr Memory for leaks only
+# options : -fsanitize=thread -fPIE -pie (cf https://mropert.github.io/2018/02/02/pic_pie_sanitizers/)
+# To efficiently use MSan (clang only), compile your program with :
+# -fsanitize=memory -fPIE -pie -fno-omit-frame-pointer -g, add -fno-optimize-sibling-calls and -O1 or later.
+# -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak -fno-omit-frame-pointer -fsanitize=undefined -fsanitize=bounds-strict -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fsanitize-undefined-trap-on-error
+# export ASAN_OPTIONS=strict_string_checks=1:detect_stack_use_after_return=1:check_initialization_order=1:strict_init_order=1:detect_invalid_pointer_pairs=2
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fsanitize=undefined -fPIE -pie -fno-omit-frame-pointer -g")
 
-        sources/collections/simplyLinkedList.c      # Collections Available
-        sources/collections/simplyLinkedList.h
+set(ASM_OPTIONS "-x assembler-with-cpp")
+set(CMAKE_ASM_FLAGS "${C_FLAGS} ${ASM_OPTIONS}")
 
-        sources/coop/coop.c                         # Package vlDzoKUd
-        sources/coop/coop.h
-        sources/coop/Object.c                       # class kGAzHwmx
-        sources/coop/Object.h
-        sources/coop/Derived.c                      # class ddUKsuMN
-        sources/coop/Derived.h
-        sources/coop/Another.c                      # class lbdtYEkR
-        sources/coop/Another.h
-        sources/coop/Geometric.c                    # class YPnOLrQT
-        sources/coop/Geometric.h
-        sources/coop/Square.c                       # class UQZwMHfN
-        sources/coop/Square.h
+# Helper function to add preprocesor definition of FILE_BASENAME
+# to pass the filename without directory path for debugging use.
+#
+# Example:
+#
+#   define_file_basename_for_sources(my_target)
+#
+# Will add -DFILE_BASENAME="filename" for each source file depended on
+# by my_target, where filename is the name of the file.
+#
+function(define_file_basename_for_sources targetname)
+    get_target_property(source_files "${targetname}" SOURCES)
+    foreach(sourcefile ${source_files})
+        # Add the FILE_BASENAME=filename compile definition to the list.
+        get_filename_component(basename "${sourcefile}" NAME_WE)
+        # Add the DIR_NAME=dir compile definition to the list
+        get_filename_component(dirname "${sourcefile}" PATH)
+        get_filename_component(lastDirname "${dirname}" NAME)
+        # Set the updated compile definitions on the source file.
+        string(TOUPPER "${lastDirname}" lastDirType)
+        set_property(
+                SOURCE "${sourcefile}" APPEND
+                PROPERTY COMPILE_DEFINITIONS
+                "ME=${basename}" "MY_NAME=\"${basename}\""
+                "MYSELF=\"${basename}.h\"" "MYSPACE=\"${lastDirname}.h\"")
+    endforeach()
+endfunction()
 
-        sources/coop/lang/lang.c                    # Package nnVYoBNR
-        sources/coop/lang/lang.h
-        sources/coop/lang/Bool.c                    # class BwXbIZdw
-        sources/coop/lang/Bool.h
-        sources/coop/lang/ToTest.h                  # interface
+include_directories(src)
+#link_directories(libs/my_lib)
 
-        sources/util/util.c                         # Package kdzvSGAN
-        sources/util/util.h
-        sources/util/Object.c                       # class KPLGWrfu
-        sources/util/Object.h
-        )
+set(SRC "coopMain")
+set(TEST "coopTest")
 
-if(MSVC)
-    target_compile_options(${MAIN_TARGET} PRIVATE /W4 /WX)
-else()
-    target_compile_options(${MAIN_TARGET} PRIVATE -Wall -Wextra -Wconversion -Wmissing-prototypes)
-endif()
-# -pedantic -Werror
-
-set_target_properties(${MAIN_TARGET} PROPERTIES OUTPUT_NAME "Main")
+add_subdirectory(src)
+enable_testing()
+add_subdirectory(test)
